bk_ida/gccida/g2/get_func_hard_reg_initial_val
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3521:1: error: unknown type name 'initial_value_pair_0'; did you mean 'initial_value_pair'?
initial_value_pair_0 *entries; // rdi 
^~~~~~~~~~~~~~~~~~~~
initial_value_pair
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:73:3: note: 'initial_value_pair' declared here
} initial_value_pair;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3525:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3530:1: error: unknown type name 'initial_value_pair_0'; did you mean 'initial_value_pair'?
initial_value_pair_0 *v13; // rax 
^~~~~~~~~~~~~~~~~~~~
initial_value_pair
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:73:3: note: 'initial_value_pair' declared here
} initial_value_pair;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3531:1: error: unknown type name 'initial_value_pair_0'; did you mean 'initial_value_pair'?
initial_value_pair_0 *v14; // rax 
^~~~~~~~~~~~~~~~~~~~
initial_value_pair
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:73:3: note: 'initial_value_pair' declared here
} initial_value_pair;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3546:31: error: expected expression
v14 = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3546:9: error: use of undeclared identifier 'initial_value_pair_0'
v14 = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3556:31: error: expected expression
v13 = ( initial_value_pair_0 *)xrealloc( entries, 16LL * v12); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/integrate.c:3556:9: error: use of undeclared identifier 'initial_value_pair_0'
v13 = ( initial_value_pair_0 *)xrealloc( entries, 16LL * v12); 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_func_hard_reg_initial_val/src/obj/integrate.o] Error 1
